# Animation-Programming

./: .gitignore  CMakeLists.txt  conanfile.txt  main.cpp
Model/: ArrowModel.cpp  ArrowModel.h  CoordArrowsModel.cpp  CoordArrowsModel.h  GltfAnimationChannel.cpp  GltfAnimationChannel.h  GltfAnimationClip.cpp  GltfAnimationClip.h  GltfInstance.cpp  GltfInstance.h  GltfModel.cpp  GltfModel.h  GltfNode.cpp  GltfNode.h  IKSolver.cpp  IKSolver.h  ModelSettings.h  Model_OpenGL.cpp  Model_OpenGL.h  SplineModel.cpp  SplineModel.h
Render/OpenGL/: FrameBuffer.cpp  FrameBuffer.h  OGLRenderData.h  OGLRenderer.cpp  OGLRenderer.h  Shader.cpp  Shader.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  Texture.cpp  Texture.h  TextureBuffer.cpp  TextureBuffer.h  UniformBuffer.cpp  UniformBuffer.h  UserInterface.cpp  UserInterface.h  VertexBuffer.cpp  VertexBuffer.h
Shaders/: Basic.frag  Basic.vert  Changed.frag  Changed.vert  Line.frag  Line.vert  gltf.frag  gltf.vert  gltf_gpu.frag  gltf_gpu.vert  gltf_gpu_dualquat.vert
Tools/: Camera.cpp  Camera.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h
Window/: Window.h  Window_OpenGL.cpp
